--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,6 +9,12 @@
       <div class="img" style="background-image: url(/{{i.photo}});" onclick="description()" ></div>
       
     {% endfor %}
+    
   </div>
+</div>
+<div id="text_img" >
+    <h3></h3>
+    <div></div>
+    
 </div>
 {% endblock content %}
