--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,6 +3,9 @@
 
 
 {% block content %}
+<div id="arrow" onclick="mainRing()">
+  <div class="arrow_left"></div>   
+</div>
 <div class="container">
   <div class="ring">
     {% for i in img_gall %}
