--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -66,6 +66,37 @@ html, body{
     align-self: center;
   }
 
+  .hall_container{
+    width: 30%;
+    height: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-self: center;
+    margin: 0 35%;
+  }
+
+  .topics{
+    width: 78%;
+    position: relative;
+    margin: 2% 0;
+    padding: 2% 4%;
+    border: 2px solid rgb(11, 11, 172);
+    background: rgba(0, 183, 255, 0.1);
+    border-radius: 10px;
+    align-self: center;
+    -webkit-transition : border 300ms linear;
+    -moz-transition : border 300ms linear;
+    -o-transition : border 300ms linear;
+    transition : border 300ms linear;
+  }
+
+  .topics:hover{
+    border : 5px solid rgb(0, 136, 255); 
+  }
+
+
+
   #footerId{
     /* width: 100%;
     height: 10%;
