--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,7 +12,7 @@
         <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
         <script type="text/javascript" src="{% static 'js/script.js' %}"></script>
     </head>
-    <body>
+    <body style=" background-image: url('static/images/background.png');">
         {% block header %}
         {% endblock header %}
   
