--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,16 +3,14 @@
 
 
 {% block content %}
-<div id="arrow" onclick="mainRing()">
-  <div class="arrow_left"></div>   
-</div>
+
 
 <div class="container">
   <!-- <div class="ring"> -->
     {%for i in img%}
     <div class="small_cont">
       <div class="light"></div>
-      <div class="img" style="background-image: url(/{{i.photo}});" onclick="description()" ></div>
+      <div class="img"  style="background-image: url(/{{i.photo}});" onclick="description()" ></div>
       <div class="sign">{{i.name}} </div>
     </div>
       
@@ -20,9 +18,11 @@
     
   <!-- </div> -->
 </div>
-<!-- <div id="text_img" >
+<div id="text_img" >
     <h3></h3>
     <div></div>
-    
-</div> -->
+</div>
+<div id="arrow" onclick="mainPage()">
+  <div class="arrow_left"></div>   
+</div>
 {% endblock content %}
