--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -32,6 +32,20 @@ html,body{
 		box-shadow: 0.5vmin -0.5vmin 0 white;
   }
 
+  .button-arrow{
+    background-color: #4CAF50; /* Green */
+    color: white;
+    padding: 20px;
+    text-align: center;
+    position:absolute;
+    border-radius: 50%;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    right: 3%;
+    bottom: 2%;
+  }
+
   .small_cont{
     height: 100%;
     width: 50%;
@@ -47,8 +61,7 @@ html,body{
     margin: 10% 5%;
     border: 30px ridge #92513e;
     background-color: white;
-    /* border: 10px solid black; */
-    /* border-image: url('../images/border.jpg') 40/ 30px repeat; */
+    z-index: 5;
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
@@ -93,6 +106,7 @@ html,body{
     opacity: 0;
   }
   
+
   
   
  
