--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -4,7 +4,7 @@ html,body{
     margin: 0;
   }
 
-.container{
+#container{
   width: 100%;
   height: 90%;
   display: flex;
@@ -55,13 +55,14 @@ html,body{
     flex-direction: column;
   }
 
+
   .img{
     width: 67%;
     height: 54%;
     margin: 10% 5%;
     border: 30px ridge #92513e;
     background-color: white;
-    z-index: 5;
+    z-index: 2;
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
