--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,18 +5,14 @@
 {% block content %}
 
 
-<div class="container">
-  <!-- <div class="ring"> -->
+<div id="container">
     {%for i in img%}
     <div class="small_cont">
       <div class="light"></div>
       <div class="img"  style="background-image: url(/{{i.photo}});" onclick="description()" ></div>
       <div class="sign">{{i.name}} </div>
     </div>
-      
     {% endfor %}
-    
-  <!-- </div> -->
 </div>
 {%for i in img%}
   <div id="text_img" >
