--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -32,18 +32,25 @@ html,body{
 		box-shadow: 0.5vmin -0.5vmin 0 white;
   }
 
+  .previous_page{
+    right: 10%;
+  }
+
+  .next_page{
+    right: 3%;
+  }
+
   .button-arrow{
-    background-color: #4CAF50; /* Green */
+    background-color: #4CAF50; 
     color: white;
     padding: 20px;
     text-align: center;
     position:absolute;
     border-radius: 50%;
-    font-size: 16px;
+    font-size: 24px;
     margin: 4px 2px;
     cursor: pointer;
-    right: 3%;
-    bottom: 2%;
+    bottom: 1%;
   }
 
   .small_cont{
@@ -99,15 +106,22 @@ html,body{
     position: absolute;
     width: 34%;
     height: 44%;
-    top: 28%;
+    top: 25%;
     left: 54%;
     background-color: #eedad4;
     box-shadow: 12px 12px 2px 1px #56443f;;
     border-radius: 10px;
     opacity: 0;
+    padding: 2%;
+  }
+
+  h3{
+    font-size: 2vw;
   }
   
-
+  .pagination{
+    background-color: #4CAF50;
+  }
   
   
  
