--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,14 +1,14 @@
-html,body{
+  html,body{
     width:100%;
     height: 100%;
     margin: 0;
   }
 
-#container{
-  width: 100%;
-  height: 90%;
-  display: flex;
-}
+  #container{
+    width: 100%;
+    height: 90%;
+    display: flex;
+  }
 
   #arrow{
     position: absolute;
@@ -55,21 +55,19 @@ html,body{
 
   .small_cont{
     height: 100%;
-    width: 50%;
+    width: 48%;
     display: flex;
-    align-items: center;
-    justify-content: flex-start;
+    justify-content: space-evenly;
     flex-direction: column;
+    margin: 0 2%;
+    align-items: flex-end;
   }
 
 
   .img{
-    width: 67%;
-    height: 54%;
-    margin: 10% 5%;
+    z-index: 2;
     border: 30px ridge #92513e;
     background-color: white;
-    z-index: 2;
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
@@ -77,10 +75,8 @@ html,body{
   }
 
   .sign{
-    padding: 2%;
-    position: absolute;
+    padding: 2% 4%;
     height: 5%;
-    width: 20%;
     bottom: 14%;
     background-color: #eedad4;
     align-self: center;
@@ -106,7 +102,7 @@ html,body{
     position: absolute;
     width: 34%;
     height: 44%;
-    top: 25%;
+    top: 20%;
     left: 54%;
     background-color: #eedad4;
     box-shadow: 12px 12px 2px 1px #56443f;;
