--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,11 +5,11 @@
 {% block content %}
 
 
-<div id="container">
+<div id="container" >
     {% for i in page_obj %}
     <div class="small_cont">
       <div class="light"></div>
-      <div class="img"  style="background-image: url(/{{i.photo}});" onclick="description()" ></div>
+      <img class="img"  src="{{i.photo}}" onclick="description()" ></img>
       <div class="sign">{{i.name}} </div>
     </div>
     {% endfor %}
@@ -24,9 +24,11 @@
   <div class="arrow_left"></div>   
 </div>
       {% if page_obj.has_previous %}
-          <a href="?page={{ page_obj.previous_page_number }}"><button class="button-arrow previous_page">←</button></a>
-      {% endif %}
+          <a href="?page={{ page_obj.previous_page_number }}" ><button class="button-arrow previous_page" >←</button></a>
+          
+          {% endif %}
       {% if page_obj.has_next %}
           <a href="?page={{ page_obj.next_page_number }}"><button class="button-arrow next_page">→</button></a>
+         
       {% endif %}
 {% endblock content %}
